--- a/templates/index.html
+++ b/templates/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Главная страница</title>
-    <link rel="stylesheet" href="all-styles.css">
-    <link rel="stylesheet" href="index-styles.css">
-    <link rel="stylesheet" href="mark-team-styles.css">
-    <link rel="stylesheet" href="gallery-styles.css">
+    <link type="text/css" href="{{ url_for('static', filename='css/all-styles.css')}}" rel="stylesheet" />
+    <link type="text/css" href="{{ url_for('static', filename='css/index-styles.css')}}" rel="stylesheet" />
+    <link type="text/css" href="{{ url_for('static', filename='css/mark-team-styles.css')}}" rel="stylesheet" />
+    <link type="text/css" href="{{ url_for('static', filename='css/gallery-styles.css')}}" rel="stylesheet" />
 </head>
 <body>
     <header>
