--- a/templates/login.html
+++ b/templates/login.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Войти</title>
-    <link rel="stylesheet" href="reg.css">
-     <link rel="stylesheet" href="all-styles.css">
+    <link type="text/css" href="{{ url_for('static', filename='css/reg.css')}}" rel="stylesheet" />
+    <link type="text/css" href="{{ url_for('static', filename='css/all-styles.css')}}" rel="stylesheet" />
 </head>
 <body>
     
